# NorthStack

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/agents/: architecture_agent.py
app/api/: routes.py
app/core/: config.py
app/prompts/: architecture_prompt.py
app/schemas/: architecture.py
app/services/: architecture_service.py
docs/: AGENTS.md  ARCHITECTURE.md  CODEX.md  CONTEXT.md  ROADMAP.md
tests/services/: test_architecture_service.py
